<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kenstevens.stratinit</groupId>
    <artifactId>stratinit-master</artifactId>
    <packaging>pom</packaging>
    <name>Strategic Initiative Master</name>
    <version>1.2.1-SNAPSHOT</version>
    <developers>
        <developer>
            <id>khstevens</id>
            <name>Ken Stevens</name>
            <email>ken.stevens@sympatico.ca</email>
            <url>www.strategicinitiative.org</url>
            <organization>Toccata Games</organization>
            <organizationUrl>www.strategicinitiative.org</organizationUrl>
            <timezone>EST</timezone>
        </developer>
    </developers>

    <organization>
        <name>Ken Stevens</name>
        <url>http://www.strategicinitiative.org/</url>
    </organization>
    <modules>
        <module>stratinit-graph</module>
        <module>stratinit-core</module>
        <module>stratinit-dao</module>
        <module>stratinit-test</module>
        <module>stratinit-server</module>
        <module>stratinit-wicket</module>
        <module>stratinit-rest</module>
    </modules>
    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <stratinit.version>1.2.1-SNAPSHOT</stratinit.version>
        <stratinit.client.version>1.3</stratinit.client.version>
        <spring.boot.version>3.4.2</spring.boot.version>
        <wicket.version>9.2.0</wicket.version>
        <querydsl.version>5.1.0</querydsl.version>
        <swt.version>3.5.2</swt.version>
        <flyway.version>10.22.0</flyway.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.16.2</version>
                    <configuration>
                        <generateBackupPoms>false</generateBackupPoms>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <release>17</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>-Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>-Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Project modules -->
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-graph</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-core</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-images</artifactId>
                <version>${stratinit.client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-client</artifactId>
                <version>${stratinit.client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-dao</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-test</artifactId>
                <version>${stratinit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.kenstevens.stratinit</groupId>
                <artifactId>stratinit-server</artifactId>
                <version>${stratinit.version}</version>
            </dependency>
            <!-- Flyway -->
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-database-postgresql</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <!-- Third-party libs -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>33.4.0-jre</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.17.0</version>
            </dependency>
            <dependency>
                <groupId>commons-httpclient</groupId>
                <artifactId>commons-httpclient</artifactId>
                <version>3.1</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.18.0</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.17.2</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.5</version>
            </dependency>
            <dependency>
                <groupId>jakarta.mail</groupId>
                <artifactId>jakarta.mail-api</artifactId>
                <version>2.1.3</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.angus</groupId>
                <artifactId>angus-mail</artifactId>
                <version>2.0.3</version>
            </dependency>
            <dependency>
                <groupId>org.jasypt</groupId>
                <artifactId>jasypt</artifactId>
                <version>1.9.3</version>
            </dependency>
            <!-- QueryDSL with Jakarta classifier -->
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-apt</artifactId>
                <version>${querydsl.version}</version>
                <classifier>jakarta</classifier>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-jpa</artifactId>
                <version>${querydsl.version}</version>
                <classifier>jakarta</classifier>
            </dependency>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-core</artifactId>
                <version>${querydsl.version}</version>
            </dependency>
            <!-- Springdoc OpenAPI (replaces SpringFox) -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>2.8.5</version>
            </dependency>
            <!-- Wicket -->
            <dependency>
                <groupId>com.giffing.wicket.spring.boot.starter</groupId>
                <artifactId>wicket-spring-boot-starter</artifactId>
                <version>4.1.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
</project>
